--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="col-md-4">
                 <div class="withdraw status">
                     <h5>Withdraw</h5>
-                <h2>$000</h2>
+                <h2>$ <span id="currentWithdraw">00</span></h2>
                 </div>
             </div>
             <div class="col-md-4">
@@ -85,7 +85,11 @@
          const withdrawBtn = document.getElementById("addWithdraw");
          withdrawBtn.addEventListener("click",function(){
              const withdrawNumber = getInputNumber("withdrawAmount");
+             updateSpanText("currentWithdraw",withdrawNumber);
+             updateSpanText("currentBalance", -1* withdrawNumber)
+             document.getElementById("withdrawAmount").value="";
          })
+
          //function call for take with draw and deposit ammount//
 
          function getInputNumber(id){
